--- a/html/Inspection/Insp_DISPERSAL EQUIPMENT.html
+++ b/html/Inspection/Insp_DISPERSAL EQUIPMENT.html
@@ -1,8 +1,9 @@
 <table class="tableInspections">
-    <tr>
+  <tr>
     <td class="cellInspectionNumber">DE1</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check gate box seal for leaks, check bottom load flange on gate box for leaks, check gate box attachment to hopper for leaks.</td>
+    <td class="cellInspectionText">Check gate box seal for leaks, check bottom load flange on gate box for leaks, check
+      gate box attachment to hopper for leaks.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">DE2</td>
@@ -17,17 +18,20 @@
   <tr>
     <td class="cellInspectionNumber">DE4</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check to see if plumbing on discharge side of pump is safety wired to top of pump.</td>
+    <td class="cellInspectionText">Check to see if plumbing on discharge side of pump is safety wired to top of pump.
+    </td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">DE5</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check bottom-loading plumbing connection to control valve as loose clamps will blow off plumbing here.</td>
+    <td class="cellInspectionText">Check bottom-loading plumbing connection to control valve as loose clamps will blow
+      off plumbing here.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">DE6</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check boom attach arms for security. Check boom connections to boom Center Section for leaks.</td>
+    <td class="cellInspectionText">Check boom attach arms for security. Check boom connections to boom Center Section
+      for leaks.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">DE7</td>
@@ -57,17 +61,21 @@
   <tr>
     <td class="cellInspectionNumber">DE12</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check condition of boom pressure gauge, tubing, and connection to gauge and boom.</td>
+    <td class="cellInspectionText">Check condition of boom pressure gauge, tubing, and connection to gauge and boom.
+    </td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">DE13</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check fan brake lever for proper adjustment. Rotate fan with brake off to check for drag.</td>
+    <td class="cellInspectionText">Check fan brake lever for proper adjustment. Rotate fan with brake off to check for
+      drag.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">DE14</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check fan brake for free play between the brake hub and the pump shaft.  Ideally there should be no free play.  If free play is more than a small detectable amount, inspect the key and keyway for wear.</td>
+    <td class="cellInspectionText">Check fan brake for free play between the brake hub and the pump shaft. Ideally there
+      should be no free play. If free play is more than a small detectable amount, inspect the key and keyway for wear.
+    </td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">DE15</td>
@@ -76,37 +84,44 @@
   </tr>
   <tr>
     <td class="cellInspectionNumber">DE16</td>
-    <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Unplug digital dispersal monitoring gauge, clean contacts with electrical contact cleaner, and reassemble with Dow Corning 4 Electrical Insulating compound to prevent water entry into plug.  Ensure connectors are locked tightly together upon reassembly.</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText"> Inspect hopper rinse tank shelf attach angles (S/N -0001 through -0219) per Service
+      Letter #248.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">DE17</td>
+    <td class="cellInspectionNumber">DE501</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Check to be sure the lower gate torque tube arm is positioned so as not to chafe the boot or boot ring in the lower fuselage skin.</td>
+    <td class="cellInspectionText">Unplug digital dispersal monitoring gauge, clean contacts with electrical contact
+      cleaner, and reassemble with Dow Corning 4 Electrical Insulating compound to prevent water entry into plug. Ensure
+      connectors are locked tightly together upon reassembly.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">DE18</td>
+    <td class="cellInspectionNumber">DE502</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Check to be sure the lower gate torque tube arm is positioned so as not to chafe the
+      boot or boot ring in the lower fuselage skin.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">DE503</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Check all wiring for routing, security, chafing, or pulling.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">DE19</td>
+    <td class="cellInspectionNumber">DE504</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Ensure hopper float slides easily along the entire length of stainless steel probe.</td>
+    <td class="cellInspectionText">Ensure hopper float slides easily along the entire length of stainless steel probe.
+    </td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">DE20</td>
+    <td class="cellInspectionNumber">DE505</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Inspect for leaks in boom pressure line.</td>
   </tr>
+
   <tr>
-    <td class="cellInspectionNumber">DE22</td>
-    <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText"> Inspect hopper rinse tank shelf attach angles (S/N -0001 through -0219) per Service Letter #248.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">DE23</td>
+    <td class="cellInspectionNumber">DE506</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText"> Check the condition and security of the Automatic Flagman dispenser (if equipped) per service letter #211.</td>
+    <td class="cellInspectionText"> Check the condition and security of the Automatic Flagman dispenser (if equipped)
+      per service letter #211.</td>
   </tr>
 </table>
