--- a/html/Inspection/Insp_EMPENNAGE.html
+++ b/html/Inspection/Insp_EMPENNAGE.html
@@ -1,107 +1,138 @@
 <table class="tableInspections">
-    <tr>
+  <tr>
     <td class="cellInspectionNumber">E1</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check vertical fin front spar attach bolt torque at fuselage fittings (420 inch-pounds at nut).</td>
+    <td class="cellInspectionText">Check vertical fin front spar attach bolt torque at fuselage fittings (420
+      inch-pounds at nut).</td>
   </tr>
-<tr>
+  <tr>
     <td class="cellInspectionNumber">E2</td>
-    <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Inspect vertical fin rear spar for cracks near top longeron connection.</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check stabilizers and vertical fin for skin cracks, loose rivets, cracks in spars,
+      ribs, corrosion.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">E3</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check stabilizers and vertical fin for skin cracks, loose rivets, cracks in spars, ribs, corrosion.</td>
+    <td class="cellInspectionText">Check trim tab attachments to elevators. Check horn.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">E4</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check trim tab attachments to elevators. Check horn.</td>
+    <td class="cellInspectionText">Check Neoprene washer at elevator down stop. (See <xref sectionTarget="2.45.4"
+        prependLabel="Section"></xref>)</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">E5</td>
-    <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check Neoprene washer at elevator down stop. (See <xref sectionTarget="2.45.4" prependLabel="Section"></xref>)</td>
+    <td class="cellInspectionInterval">(100/12 Months)</td>
+    <td class="cellInspectionText">Check stabilizer attaching pedestal for cracks per S/L #180 and S/L #180A. When the
+      replacement pedestal is installed, inspections may be performed on a 12-month basis.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">E6</td>
-    <td class="cellInspectionInterval">(100/12 Months)</td>
-    <td class="cellInspectionText">Check stabilizer attaching pedestal for cracks per S/L #180 and S/L #180A. When the replacement pedestal is installed, inspections may be performed on a 12-month basis.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">E7</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Inspect for corrosion on internal horizontal stabilizer braces per S/L #98.</td>
   </tr>
   <tr>
+    <td class="cellInspectionNumber">E7</td>
+    <td class="cellInspectionInterval">(100/12 Months)</td>
+    <td class="cellInspectionText">Check the upper rudder hinge and surrounding structure for movement of the upper
+      hinge relative to the rudder, sheared rivets or cracks in the skins, spars, hinge brackets or doublers per Service
+      Letter #247 and Service Letter #331.</td>
+  </tr>
+  <tr>
     <td class="cellInspectionNumber">E8</td>
-    <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Check torque on all bolts connecting rudder and elevators to fixed surfaces and at elevator horn connection to pedestal and push-rod. Torque should be 100 inch-pounds at the nut.</td>
+    <td class="cellInspectionInterval">(100/12 Months)</td>
+    <td class="cellInspectionText">Inspect all tubes and tube clusters in the immediate vicinity of the vertical and
+      horizontal stabilizer, especially the upper diagonal tube (p/n 11029-10) for cracking (float-equipped aircraft
+      prior to serial number -0259). Repairs to the upper diagonal tube can be performed according to data located in
+      Service Letter #266.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">E9</td>
-    <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Inspect horizontal stabilizer struts and fittings for corrosion, erosion, and cracking as referenced in S/L #198.  Check bolt torque and tighten check nuts.  (See <xref sectionTarget="2.45.3" prependLabel="Section"></xref>).</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Visual inspection of the horizontal stabilizer auxiliary fin forward attachment (S/N
+      -0001 through -0178) per Service Letter #232.</td>
+  </tr>
+
+
+
+  <tr>
+    <td class="cellInspectionNumber">E101</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Inspect vertical fin rear spar for cracks near top longeron connection.</td>
+  </tr>
+
+  <tr>
+    <td class="cellInspectionNumber">E102</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Check torque on all bolts connecting rudder and elevators to fixed surfaces and at
+      elevator horn connection to pedestal and push-rod. Torque should be 100 inch-pounds at the nut.</td>
+  </tr>
+
+  <tr>
+    <td class="cellInspectionNumber">E201</td>
+    <td class="cellInspectionInterval">(earliest of 1000 hours or 12 months)</td>
+    <td class="cellInspectionText">Visual inspection of the horizontal stabilizer auxiliary fin forward attachment (S/N
+      -0179 and subsequent) per Service Letter #232.</td>
+  </tr>
+
+  <tr>
+    <td class="cellInspectionNumber">E202</td>
+    <td class="cellInspectionInterval">(1350)</td>
+    <td class="cellInspectionText">For planes through s/n 802A-0188, replace eyebolts in stabilizer at strut fittings
+      per S/L #129.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">E10</td>
-    <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Check torque of stabilizer eye-bolts.  Torque of AN47 eyebolts is 600 in-lbs.  Torque for 9/16" diameter p/n 30775-1 eye-bolts is 100 ft-lbs.</td>
+    <td class="cellInspectionNumber">E203</td>
+    <td class="cellInspectionInterval">(5000)</td>
+    <td class="cellInspectionText">For planes s/n 802A-0189 and subs, and those modified IAW SL#129A, replace eyebolts
+      in stabilizer at strut fittings per S/L #129.</td>
   </tr>
-    <tr>
-    <td class="cellInspectionNumber">E11</td>
+
+
+
+
+  <tr>
+    <td class="cellInspectionNumber">E501</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Inspect horizontal stabilizer struts and fittings for corrosion, erosion, and
+      cracking as referenced in S/L #198. Check bolt torque and tighten check nuts. (See <xref sectionTarget="2.45.3"
+        prependLabel="Section"></xref>).</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">E502</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Check torque of stabilizer eye-bolts. Torque of AN47 eyebolts is 600 in-lbs. Torque
+      for 9/16" diameter p/n 30775-1 eye-bolts is 100 ft-lbs.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">E503</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Inspect all elevator and rudder hinges for wear, loose hardware, and cracking.</td>
   </tr>
-    <tr>
-    <td class="cellInspectionNumber">E12</td>
+  <tr>
+    <td class="cellInspectionNumber">E504</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Inspect bushings and bolts through rudder horn for wear.</td>
   </tr>
-    <tr>
-    <td class="cellInspectionNumber">E13</td>
+  <tr>
+    <td class="cellInspectionNumber">E505</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Check control surface travel: Elevators 29° up, 15° down. Rudder travel 24° R. or L. All travels +/- 1°.</td>
+    <td class="cellInspectionText">Check control surface travel: Elevators 29° up, 15° down. Rudder travel 24° R. or L.
+      All travels +/- 1°.</td>
   </tr>
-    <tr>
-    <td class="cellInspectionNumber">E14</td>
+  <tr>
+    <td class="cellInspectionNumber">E506</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Check elevator trim tab travel:  With nose full DOWN Trim, Tab at 8° UP from centered (+/- 1 ½ °) (Tab Trailing Edge UP).  With nose full UP Trim, Tab at 11° DOWN from centered (+/- 1 ½ °) (Tab Trailing Edge DOWN)   For Department of State aircraft, travel is 11° UP, 8° DOWN +/- 1°.</td>
+    <td class="cellInspectionText">Check elevator trim tab travel: With nose full DOWN Trim, Tab at 8° UP from centered
+      (+/- 1 ½ °) (Tab Trailing Edge UP). With nose full UP Trim, Tab at 11° DOWN from centered (+/- 1 ½ °) (Tab
+      Trailing Edge DOWN) For Department of State aircraft, travel is 11° UP, 8° DOWN +/- 1°.</td>
   </tr>
-    <tr>
-    <td class="cellInspectionNumber">E15</td>
+  <tr>
+    <td class="cellInspectionNumber">E507</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Remove gap covers from stabilizers and check torque on bolts attaching stabilizers to fuselage. (See <xref sectionTarget="2.45.1" prependLabel="Section"></xref>)</td>
-  </tr>
-    <tr>
-    <td class="cellInspectionNumber">E16</td>
-    <td class="cellInspectionInterval">(1350)</td>
-    <td class="cellInspectionText">For planes through s/n 802A-0188, replace eyebolts in stabilizer at strut fittings per S/L #129.</td>
-  </tr>
-<tr>
-    <td class="cellInspectionNumber">E17</td>
-    <td class="cellInspectionInterval">(5000)</td>
-    <td class="cellInspectionText">For planes s/n 802A-0189 and subs, and those modified IAW SL#129A, replace eyebolts in stabilizer at strut fittings per S/L #129.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">E18</td>
-    <td class="cellInspectionInterval">(100/12 Months)</td>
-    <td class="cellInspectionText">Check the upper rudder hinge and surrounding structure for movement of the upper hinge relative to the rudder,  sheared rivets or cracks in the skins, spars, hinge brackets or doublers per Service Letter #247 and Service Letter #331.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">E19</td>
-    <td class="cellInspectionInterval">(100/12 Months)</td>
-    <td class="cellInspectionText">Inspect all tubes and tube clusters in the immediate vicinity of the vertical and horizontal stabilizer, especially the upper diagonal tube (p/n 11029-10) for cracking (float-equipped aircraft prior to serial number -0259). Repairs to the upper diagonal tube can be performed according to data located in Service Letter #266.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">E20</td>
-    <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Visual inspection of the horizontal stabilizer auxiliary fin forward attachment (S/N -0001 through -0178) per Service Letter #232.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">E21</td>
-    <td class="cellInspectionInterval">(earliest of 1000 hours or 12 months)</td>
-    <td class="cellInspectionText">Visual inspection of the horizontal stabilizer auxiliary fin forward attachment (S/N -0179 and subsequent) per Service Letter #232.</td>
+    <td class="cellInspectionText">Remove gap covers from stabilizers and check torque on bolts attaching stabilizers to
+      fuselage. (See <xref sectionTarget="2.45.1" prependLabel="Section"></xref>)</td>
   </tr>
 </table>
