--- a/html/Inspection/Insp_ENGINE AND MOUNT.html
+++ b/html/Inspection/Insp_ENGINE AND MOUNT.html
@@ -24,23 +24,16 @@
       Check controls on primary governor and controls on fuel control. Have someone in cockpit move start lever and then
       power lever through range of travel and look for loose connections, binding parts, rubbing, etc.  <b>CAUTION:</b> Do not move power lever into reverse position with engine stopped or controls
         will be damaged.
-
     </td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">EM5</td>
-    <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Inspect all cowling parts for cracks, especially at screw connections and in the
-      corners of cut-outs.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">EM6</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Inspect engine oil scavenge tubes and fuel lines at engine firewalls for signs of
       chafing. (Ref. SL126).</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">EM7</td>
+    <td class="cellInspectionNumber">EM6</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Inspect engine oil scavenge tubes and fuel lines at engine firewalls for signs of
       chafing. (Ref. SL126).</td>
@@ -54,12 +47,25 @@
   </tr>
   <tr>
     <td class="cellInspectionNumber">EM8</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Verify that the routing of the flexible Py line does not allow rubbing or chafing on any rotating component or other structure (serial numbers -0001 thru -0555 and -4001 thru -4025).</td>
+  </tr>
+
+  <tr>
+    <td class="cellInspectionNumber">EM101</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Inspect all cowling parts for cracks, especially at screw connections and in the
+      corners of cut-outs.</td>
+  </tr>
+
+  <tr>
+    <td class="cellInspectionNumber">EM102</td>
     <td class="cellInspectionInterval">(300)</td>
     <td class="cellInspectionText">Inspect engine vibration insulators for cracks, swelling, or separation of elastomer.
     </td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">EM9</td>
+    <td class="cellInspectionNumber">EM103</td>
     <td class="cellInspectionInterval">(300)</td>
     <td class="cellInspectionText">
       Examine engine mount for cracks and corrosion per <xref fileTarget="html/Maintenance/Engine Mount Inspection.html" prependLabel="Section"></xref>, and 
@@ -68,22 +74,27 @@
     </td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">EM10</td>
+    <td class="cellInspectionNumber">EM104</td>
     <td class="cellInspectionInterval">(300)</td>
     <td class="cellInspectionText">Inspect FCU to fuel nozzle manifold tubing for chafing. (S/N -0001- through -0073).  (Ref. SL173)</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">EM11</td>
+    <td class="cellInspectionNumber">EM105</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Examine engine mount for cracks and corrosion per Service Letters #253, #299 and #335 and check torque at firewall connections.  Torque is 4000 in-lbs on head of upper bolts and 1100-1300 in-lbs on nuts of lower bolts. Reinstall safety wire and cotter pins.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">EM501</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Remove and inspect P3 filter.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">EM12</td>
+    <td class="cellInspectionNumber">EM502</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Inspect SCEET compressor discharge and starter/generator cooling tubes for delamination (as equipped).  (Ref. SL397)</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">EM13</td>
+    <td class="cellInspectionNumber">EM503</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">
       Verify calibration of engine instruments per
@@ -93,23 +104,15 @@
       .</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">EM15</td>
+    <td class="cellInspectionNumber">EM504</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Inspect SCEET compressor discharge and starter/generator cooling tubes for delamination - as equipped: PT6-powered models with external engine compressor discharge system.( -65 series and -67 series engines have internal compressor discharge and are not applicable). All Air Tractor turbine models with optional 51207 Starter Generator Cooling Installation.</td>
   </tr>
-  <tr>
-    <td class="cellInspectionNumber">EM16</td>
+  <tr style="background-color: red;">
+    <td class="cellInspectionNumber">EM???</td>
     <td class="cellInspectionInterval">(---)</td>
     <td class="cellInspectionText">Check the torque of the isolator engine bolts to 275-300 in-lbs. If any torque values are outside of the acceptable range, refer to Service Letter #402</td>
   </tr>
-  <tr>
-    <td class="cellInspectionNumber">EM17</td>
-    <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Examine engine mount for cracks and corrosion per Service Letters #253, #299 and #335 and check torque at firewall connections.  Torque is 4000 in-lbs on head of upper bolts and 1100-1300 in-lbs on nuts of lower bolts. Reinstall safety wire and cotter pins.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">EM18</td>
-    <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Verify that the routing of the flexible Py line does not allow rubbing or chafing on any rotating component or other structure (serial numbers -0001 thru -0555 and -4001 thru -4025).</td>
-  </tr>
+
+
 </table>
