--- a/html/Inspection/Insp_ELECTRICAL SYSTEM.html
+++ b/html/Inspection/Insp_ELECTRICAL SYSTEM.html
@@ -7,41 +7,48 @@
   <tr>
     <td class="cellInspectionNumber">ES2</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Inspect wires and under battery box and along engine mount tubes for chafing or loose connections.</td>
+    <td class="cellInspectionText">Inspect wires and under battery box and along engine mount tubes for chafing or loose
+      connections.</td>
   </tr>
-   <tr>
+  <tr>
     <td class="cellInspectionNumber">ES3</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Inspect relays and other electrical components in vicinity of battery box and on firewall for loose connections, signs of shorts, corrosion, etc.</td>
+    <td class="cellInspectionText">Inspect relays and other electrical components in vicinity of battery box and on
+      firewall for loose connections, signs of shorts, corrosion, etc.</td>
   </tr>
-   <tr>
+  <tr>
     <td class="cellInspectionNumber">ES4</td>
-    <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Inspect starter-generator connections to engine, and wiring to terminals.</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Inspect under instrument panel for loose wires or chafing or evidence of shorting.
+      (It may be necessary to remove the control stick for comfort).</td>
   </tr>
-   <tr>
+  <tr>
     <td class="cellInspectionNumber">ES5</td>
-    <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Remove R/H side skin below hopper and check wire bundle for security and chafing.  Check for chafing at firewall pass-throughs.</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Turn on master switch (Batt) and check all external and internal lights. Check
+      rheostats.</td>
   </tr>
-   <tr>
+  <tr>
     <td class="cellInspectionNumber">ES6</td>
-    <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Inspect under instrument panel for loose wires or chafing or evidence of shorting. (It may be necessary to remove the control stick for comfort).</td>
-  </tr>
-   <tr>
-    <td class="cellInspectionNumber">ES7</td>
-    <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Turn on master switch (Batt) and check all external and internal lights. Check rheostats.</td>
-  </tr>
-   <tr>
-    <td class="cellInspectionNumber">ES8</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Turn on master switch (Batt) and push to test all caution/warning lights.</td>
   </tr>
-   <tr>
-    <td class="cellInspectionNumber">ES9</td>
+  <tr>
+    <td class="cellInspectionNumber">ES101</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Inspect starter-generator connections to engine, and wiring to terminals.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">ES102</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Remove R/H side skin below hopper and check wire bundle for security and chafing.
+      Check for chafing at firewall pass-throughs.</td>
+  </tr>
+
+  <tr>
+    <td class="cellInspectionNumber">ES103</td>
     <td class="cellInspectionInterval">(200-300)</td>
-    <td class="cellInspectionText">Inspect and clean the starter generator and brushes per <xref fileTarget="html/Maintenance/Starter Generator Brush Inspection.html" prependLabel="Section"></xref>.</td>
+    <td class="cellInspectionText">Inspect and clean the starter generator and brushes per <xref
+        fileTarget="html/Maintenance/Starter Generator Brush Inspection.html" prependLabel="Section"></xref>.</td>
   </tr>
 </table>
