--- a/html/Inspection/Insp_FUEL SYSTEM.html
+++ b/html/Inspection/Insp_FUEL SYSTEM.html
@@ -26,15 +26,33 @@
   </tr>
   <tr>
     <td class="cellInspectionNumber">FS5</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Inspect Falls Filtration Technologies p/n 03W2536-231 filter cartridge per Service
+      Letter #286 (if equipped).</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">FS101</td>
     <td class="cellInspectionInterval">(300)</td>
     <td class="cellInspectionText">
       Replace high-pressure fuel-pump filter element
-       per “Pratt and Whitney Engine Maintenance
-       Manual”
+      per “Pratt and Whitney Engine Maintenance
+      Manual”
     </td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">FS8</td>
+    <td class="cellInspectionNumber">FS102</td>
+    <td class="cellInspectionInterval">(First of 300 or 12 months)</td>
+    <td class="cellInspectionText"> Inspect FCU to fuel nozzle manifold tubing for chafing. (S/N -0001- through -0073).
+    </td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">FS103</td>
+    <td class="cellInspectionInterval">(---)</td>
+    <td class="cellInspectionText">Clean fuel nozzles, check flow and pattern per “Pratt and Whitney Engine Maintenance
+      Manual” at the recommended interval.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">FS501</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">
       Check functionality of Low Fuel Warning Light per
@@ -43,31 +61,16 @@
     </td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">FS9</td>
+    <td class="cellInspectionNumber">FS502</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Inspect exterior of header tank on lower side for signs of corrosion from within
       tank, and interior of tank for contamination per S/L #148.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">FS10</td>
+    <td class="cellInspectionNumber">FS503</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Remove finger strainers (steel elbow) from fuel tank and clean. Inspect for fuel
       contamination per Service Letter #148.</td>
   </tr>
-  <tr>
-    <td class="cellInspectionNumber">FS12</td>
-    <td class="cellInspectionInterval">(---)</td>
-    <td class="cellInspectionText">Clean fuel nozzles, check flow and pattern per “Pratt and Whitney Engine Maintenance
-      Manual” at the recommended interval.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">FS13</td>
-    <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Inspect Falls Filtration Technologies p/n 03W2536-231 filter cartridge per Service Letter #286 (if equipped).</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">FS14</td>
-    <td class="cellInspectionInterval">(First of 300 or 12 months)</td>
-    <td class="cellInspectionText"> Inspect FCU to fuel nozzle manifold tubing for chafing. (S/N -0001- through -0073).</td>
-  </tr>
+
 </table>
