--- a/html/Inspection/Insp_WINGS.html
+++ b/html/Inspection/Insp_WINGS.html
@@ -1,50 +1,55 @@
 <table class="tableInspections">
   <tr>
-    <td class="cellInspectionNumber">W1</td>
+    <td class="cellInspectionNumber">W101</td>
     <td class="cellInspectionInterval">(300)</td>
     <td class="cellInspectionText">Remove inspection covers and check for cracks in ribs or spar webs.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">W2</td>
+    <td class="cellInspectionNumber">W102</td>
     <td class="cellInspectionInterval">(300)</td>
     <td class="cellInspectionText">Inspect wing skins for cracks, loose rivets, and for corrosion. Keep clean.</td>
   </tr>
-  <tr>
-    <td class="cellInspectionNumber">W3</td>
-    <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Inspect wing attach angles for wear, cracks or missing nuts.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">W4</td>
+
+
+    <tr>
+    <td class="cellInspectionNumber">W201</td>
     <td class="cellInspectionInterval">(1,000)</td>
     <td class="cellInspectionText">Remove and inspect the rear spar bolt per instructions in <xref sectionTarget="2.100.1" prependLabel="Section"></xref>.</td>
   </tr>
-  <tr>
-    <td class="cellInspectionNumber">W5</td>
-    <td class="cellInspectionInterval">(2,000)</td>
-    <td class="cellInspectionText">Inspect the wing center splice connection as described in <xref sectionTarget="2.100.2" prependLabel="Section"></xref>.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">W6</td>
-    <td class="cellInspectionInterval">(2000)</td>
-    <td class="cellInspectionText">Loosen (one at a time) the four AN6 bolts through the wing attach angles and rotate ¼
-      turn to insure that they are not frozen. (See <xref sectionTarget="2.100.1" prependLabel="Section"></xref>).</td>
-  </tr>
 
   <tr>
-    <td class="cellInspectionNumber">W7</td>
+    <td class="cellInspectionNumber">W202</td>
     <td class="cellInspectionInterval">(600-2200)</td>
     <td class="cellInspectionText">Perform eddy current inspection on spar caps, spar splice blocks and spar splice plate per Service Letter #284, if aircraft is not equipped with 80540 computerized firegate. (Serial numbers -0001 thru -0178). Operators should also perform the inspection described in Service Letter #215 (serial numbers -0001 thru -0101) unless already accomplished previously.</td>
   </tr>
 
   <tr>
-    <td class="cellInspectionNumber">W8</td>
+    <td class="cellInspectionNumber">W203</td>
+    <td class="cellInspectionInterval">(2,000)</td>
+    <td class="cellInspectionText">Inspect the wing center splice connection as described in <xref sectionTarget="2.100.2" prependLabel="Section"></xref>.</td>
+  </tr>
+
+  <tr>
+    <td class="cellInspectionNumber">W204</td>
+    <td class="cellInspectionInterval">(2000)</td>
+    <td class="cellInspectionText">Loosen (one at a time) the four AN6 bolts through the wing attach angles and frame bushings and rotate ¼
+      turn to insure that they are not corroded and frozen.</td>
+  </tr>
+
+  <tr>
+    <td class="cellInspectionNumber">W501</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Inspect wing attach angles for wear, cracks or missing nuts.</td>
+  </tr>
+
+  <tr>
+    <td class="cellInspectionNumber">W502</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Inspect wing leading edge ribs for cracks.</td>
   </tr>
 
   <tr>
-    <td class="cellInspectionNumber">W9</td>
+    <td class="cellInspectionNumber">W503</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText"> Remove and inspect the rear spar bolt per instructions in Service Letter #188 (serial numbers -0001 through -0091).</td>
   </tr>
