--- a/html/Maintenance/Approved Oil and Refrigerants.html
+++ b/html/Maintenance/Approved Oil and Refrigerants.html
@@ -1,27 +1,34 @@
-<p style="color:red">CONTENT NOT CREATED</p>
+<p><b>R134a Systems</b></p>
+<p>All new production aircraft are equipped with R134a systems. See below for refrigerant and oil quantity.</p>
 
-<div style="background-color: lightcoral;">
-    <p class="dontBreakAfter"><b>AT-802/802A System Refrigerant Requirement</b></p>
-    <table class="plainTableLarge">
-        <tr>
-            <td class="plainTableHeaderCell"></td>
-            <td class="plainTableHeaderCell"> Single Condenser System </td>
-            <td class="plainTableHeaderCell"> Dual Condenser System</td>
-        </tr>
-        <tr>
-            <td class="plainTableHeaderCell">Oil</td>
-            <td class="plainTableNormalCell rightAlignText">10.5 oz (310cc)</td>
-            <td class="plainTableNormalCell rightAlignText">11.8 oz (349 cc) </td>
-        </tr>
-        </tr>
-        <tr>
-            <td class="plainTableHeaderCell">Refrigerant</td>
-            <td class="plainTableNormalCell rightAlignText">3 lbs (1.36 kg)</td>
-            <td class="plainTableNormalCell rightAlignText">3 lbs 3 oz (1.45 kg) </td>
-        </tr>
-    </table>
-</div>
 
-<p>Compressor clutches and compressor-clutch magnets are no longer available from the manufacturer for the original R-12 airconditioner system. Since there are still many of these units in service, Air Tractor has an alternate clutch available. The original R-12 clutch is easily identified by the double "V" belt pulley grooves. 
+<p class="dontBreakAfter"><b>AT-802/802A System Refrigerant Requirement</b></p>
+<table class="plainTableLarge">
+    <tr>
+        <td class="plainTableHeaderCell"></td>
+        <td class="plainTableHeaderCell"> Single Condenser System </td>
+        <td class="plainTableHeaderCell"> Dual Condenser System</td>
+    </tr>
+    <tr>
+        <td class="plainTableHeaderCell">Oil</td>
+        <td class="plainTableNormalCell rightAlignText">10.5 oz (310cc)</td>
+        <td class="plainTableNormalCell rightAlignText">11.8 oz (349 cc) </td>
+    </tr>
+    </tr>
+    <tr>
+        <td class="plainTableHeaderCell">Refrigerant</td>
+        <td class="plainTableNormalCell rightAlignText">3 lbs (1.36 kg)</td>
+        <td class="plainTableNormalCell rightAlignText">3 lbs 3 oz (1.45 kg) </td>
+    </tr>
+</table>
+
+
+<p><b>R-12 Systems</b></p>
+<p>Compressor clutches and compressor-clutch magnets are no longer available from the manufacturer for the original R-12
+    air conditioner system. Since there are still many of these units in service, Air Tractor has an alternate clutch
+    available. The original R-12 clutch is easily identified by the double "V" belt pulley grooves.  To install the P/N 25-8502-24 clutch on your aircraft, refer to Service Letter
+    #181.
 </p>
-<p>If your compressor clutch requires servicing, we suggest that you convert the system to R-134a refrigerant according to Service Letter #159. However if you wish to continue to use R-12 refrigerant, the clutch may be replaced with the P/N 25-8502-24 poly-V belt clutch. To install the P/N 25-8502-24 clutch on your aircraft, refer to Service Letter #181.</p>
+<p>If your R-12 air conditioning system requires servicing, we suggest that you convert the system to R-134a refrigerant according
+    to Service Letter #159. 
+</p>
