--- a/html/Maintenance/Brake Removal and Replacement.html
+++ b/html/Maintenance/Brake Removal and Replacement.html
@@ -1,4 +1,8 @@
-<p>Brake details are shown in <xref fileTarget="img_Fig_32.png" xrefType="link">Fig Cross Reference</xref>.</p>
+<p>
+    Brake details are shown in <xref fileTarget="img_Fig_32.png" xrefType="link">Fig Cross Reference</xref>.
+    For instructions concerning brake maintenance and overhaul, refer also to Cleveland (Parker) Document AWBCMM0001-22.
+</p>
+</p>
 <p>Brake fluid used is red Mil-H-5606A petroleum-base fluid, which is used in most light aircraft. Do not use automotive brake fluid as this will swell the O-rings. </p>
 
 <figure>
