--- a/html/Maintenance/Compressor Replacement.html
+++ b/html/Maintenance/Compressor Replacement.html
@@ -20,9 +20,14 @@
     valves and in bearings causing quick failure of the new compressor. Also it's important to maintain the original oil
     charge amount when replacing the compressor. </p>
 
-<p>To replace the compressor, the removal steps should be followed in the reverse order. <span style="color:red">The belts for the R12 system
-    should be tensioned to 10 lbs using a Deco tensiometer or equivalent. </span>Tension the flat serpentine belt of the R134a
-    system as described in <span style="color: red">Service Letter #159</span> . </p>
-
 <p>Use refrigeration oil on the O-rings at the compressor-hose fitting before reconnecting to compressor.
     Follow evacuation and refrigerant charging instructions spelled out in this section of this manual. </p>
+
+<p>
+    To replace the compressor, the removal steps should be followed in the reverse order. For R134a systems, tension the
+    belt per
+    <xref sectionTarget="2.15.7" prependLabel="Section"></xref>.
+
+    For R-12 systems, the belts for the R12 system
+    should be tensioned to 10 lbs using a Deco tensiometer or equivalent.
+</p>
